# java-watch

./: .codecov.yml  .editorconfig  .gitignore  LICENSE  README.md  RELEASE-NOTES.md  pom.xml  update-rust-jni-libs.sh
.github/: dependabot.yml
.github/workflows/: build.yaml  release.yaml
src/main/checkerframework/: nio-file.astub
src/main/java/engineering/swat/watch/: ActiveWatch.java  Approximation.java  DaemonThreadPool.java  OnOverflow.java  OverflowPolicy.java  Watch.java  WatchEvent.java  WatchEventListener.java  WatchScope.java  WatchSubscription.java  Watcher.java
src/main/java/engineering/swat/watch/impl/: BundledSubscription.java  EventHandlingWatch.java  ISubscribable.java  JDKDirectoryWatcher.java  JDKFileWatcher.java  JDKPoller.java  JDKRecursiveDirectoryWatcher.java  SubscriptionKey.java
src/main/java/engineering/swat/watch/impl/jdk/: JDKBaseWatch.java  JDKDirectoryWatch.java  JDKDirectoryWatcher.java  JDKFileTreeWatch.java  JDKFileWatch.java  JDKFileWatcher.java  JDKPoller.java  JDKRecursiveDirectoryWatch.java  JDKRecursiveDirectoryWatch2.java  JDKRecursiveDirectoryWatcher.java  Platform.java
src/main/rust/: .gitignore  Cargo.toml
src/main/rust/src/: fs_monitor.rs  lib.rs
src/test/java/engineering/swat/watch/: APIErrorsTests.java  AwaitilityTests.java  DeleteLockTests.java  OverflowTests.java  ParallelWatches.java  RecursiveWatchTests.java  SingleDirectoryTests.java  SingleFileTests.java  SmokeTests.java  TestDirectory.java  TestHelper.java  TortureTests.java
src/test/java/engineering/swat/watch/impl/: BundlingTests.java  EventHandlingWatchTests.java  JDKFileTreeWatchTests.java
src/test/java/engineering/swat/watch/util/: WaitFor.java
src/test/resources/: log4j2-test.xml
(+41 files in other folders)
