[package]
name = "rust-fsevents-jni"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
objc2-core-services = "0.3.2"
objc2-core-foundation = "0.3.2"
dispatch2 = { version = "0.3.1", default-features = false, features = ["alloc"] }
jni = "0.21.1"
